Pantheon desktop fixes
Fix level bar not showing in file manager
Fix wrong accent color in file manager

--- a/gtk-3.0/widgets/_sidebar.scss
+++ b/gtk-3.0/widgets/_sidebar.scss
@@ -56,29 +56,30 @@
     }
   }
 
-    //elementary os file manager
-    &.source-list{
-      background: $base_color;
-      padding: 4px 0px;
-      &.view{
-        transition: all .12s ease-in;
-        &:selected {
-          padding-left: 4px;
-          background: transparentize(#eee, 0.5);
-          color: #ACACAC;
-          border-left: 4px solid $selected_bg_color;
-          &:active { box-shadow: inset 0 2px 3px -1px transparentize(black, 0.5); }
-    
-          &.has-open-popup,
-          &:hover { background-color: transparentize($selected_bg_color, 0.1); }
-    
-          &:backdrop { background-color: $backdrop_selected_bg_color; }
-        }
-        &:hover, iconview.source-list:hover { 
-            background-color: if(variant == light, transparentize($bg_color, 0.6), transparentize($bg_color, 0.6)); 
-        }
+  //elementary os file manager
+  &.source-list{
+    background: $_sidebar_color;
+    color: #98abb2;
+    padding: 4px 0px;
+    &.view{
+      transition: all .12s ease-in;
+      &:selected {
+        padding-left: 4px;
+        background: $selected_bg_color;
+        color: $selected_fg_color;
+        
+        &:active { box-shadow: inset 0 2px 3px -1px transparentize(black, 0.5); }
+  
+        &.has-open-popup,
+        &:hover { background-color: transparentize($selected_bg_color, 0.1); }
+  
+        &:backdrop { background-color: $backdrop_selected_bg_color; }
+      }
+      &:hover, iconview.source-list:hover { 
+          background-color: transparentize($_sidebar_color, 0.05); 
       }
     }
+  }
     
 
   paned & { &.left, &.right, &.left:dir(rtl), &:dir(rtl), &:dir(ltr), & {
